--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, lint, docs
+envlist = py35, lint
 skipsdist = True
 
 [testenv]
@@ -12,7 +12,7 @@ commands =
 deps =
     flake8
 commands =
-    {envbindir}/flake8 --exclude build,docs,.tox .
+    {envbindir}/flake8 --exclude build,.tox .
 
 [testenv:coverage]
 deps =
