Remove unneeded code.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 deps =
     -rrequirements.txt
 commands =
-    {envpython} -m unittest discover
+    {envpython} -m unittest discover {posargs}
 
 [testenv:lint]
 deps =
@@ -20,5 +20,5 @@ deps =
     coverage
 commands =
     {envbindir}/coverage run -m unittest
-    {envbindir}/coverage report --show-missing --skip-covered --fail-under=100 \
-        --include=query-exporter/* --omit=**/tests/*
+    {envbindir}/coverage report --show-missing --fail-under=100 \
+        --include=query_exporter/* --omit=**/tests/*
