Fix coverage config

--- a/tox.ini
+++ b/tox.ini
@@ -20,5 +20,4 @@ deps =
     coverage
 commands =
     {envbindir}/coverage run -m unittest
-    {envbindir}/coverage report --show-missing --fail-under=100 \
-        --include=query_exporter/* --omit=**/tests/*
+    {envbindir}/coverage report --show-missing --fail-under=100
