--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,44 @@
 [tox]
-envlist = py3, lint
 skipsdist = True
+
+[globals]
+lint_files = setup.py query_exporter
 
 [testenv]
 deps =
-    -rrequirements.txt
+    .
+    .[testing]
 commands =
-    {envpython} -m unittest discover {posargs}
+    {envbindir}/pytest {posargs}
+
+[testenv:format]
+deps =
+    isort
+    yapf
+commands =
+    {envbindir}/yapf --in-place --recursive {[globals]lint_files}
+    {envbindir}/isort --recursive {[globals]lint_files}
 
 [testenv:lint]
 deps =
     flake8
+    isort
+    yapf
 commands =
-    {envbindir}/flake8 --exclude build,.tox .
+    {envbindir}/yapf --diff --recursive {[globals]lint_files}
+    {envbindir}/isort --check-only --diff --recursive {[globals]lint_files}
+    {envbindir}/flake8 {[globals]lint_files}
+
+[testenv:check]
+deps =
+    mypy
+commands =
+    {envbindir}/mypy -p query_exporter {posargs}
 
 [testenv:coverage]
 deps =
-    -rrequirements.txt
-    coverage
+    .
+    .[testing]
+    pytest-cov
 commands =
-    {envbindir}/coverage run -m unittest
-    {envbindir}/coverage report --show-missing --fail-under=100
+    {envbindir}/pytest --cov {posargs}
