tox: add "run" command

--- a/tox.ini
+++ b/tox.ini
@@ -42,3 +42,9 @@ deps =
     pytest-cov
 commands =
     {envbindir}/pytest --cov {posargs}
+
+[testenv:run]
+deps =
+    .
+commands =
+    {envbindir}/query-exporter {posargs}
