--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -29,7 +29,7 @@ base: core18
 
 apps:
   daemon:
-    command: bin/query-exporter -H 0.0.0.0 $SNAP_DATA/config.yaml
+    command: 'bin/query-exporter -H 0.0.0.0 :: -- $SNAP_DATA/config.yaml'
     daemon: simple
     plugs:
       - network-bind
