--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = query-exporter
-version = 1.8.1
+version = 1.9.0
 license = GPLv3+
 description = Export Prometheus metrics generated from SQL queries
 long_description = file: README.rst
@@ -11,11 +11,14 @@ maintainer_email = alberto.donato@gmail.com
 url = https://github.com/albertodonato/query-exporter
 keywords = sql, metric, prometheus, exporter
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
+    Framework :: AsyncIO
     Intended Audience :: System Administrators
     License :: OSI Approved :: GNU General Public License (GPL)
     Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
+    Topic :: Database
+    Topic :: System :: Monitoring
     Topic :: Utilities
 
 [options]
