fix doc, add --version

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
     Framework :: AsyncIO
     Intended Audience :: System Administrators
     License :: OSI Approved :: GNU General Public License (GPL)
-    Operating System :: POSIX :: Linux
+    Operating System :: OS Independent
     Programming Language :: Python :: 3
     Topic :: Database
     Topic :: System :: Monitoring
