--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,11 @@ show_missing = True
 fail_under = 100.0
 skip_covered = True
 
+[flake8]
+max-line-length = 80
+select = C, E, F, W, B, B950
+ignore = E203, E501, W503
+
 [mypy]
 incremental = False
 warn_return_any = True
