add libssl-dev to snap dependencies

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -52,6 +52,7 @@ parts:
     build-packages:
       - libmysqlclient-dev
       - libpq-dev
+      - libssl-dev
     stage-packages:
       - libmysqlclient20
       - libpq5
