add JSON-schema validation

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,19 +25,25 @@ classifiers =
 python_requires = >= 3.6
 install_requires =
     aiohttp
+    jsonschema
     prometheus-client
     prometheus-aioexporter >= 1.5.1
-    PyYaml
+    PyYAML
     SQLAlchemy
     sqlalchemy_aio
     toolrack >= 2.1.0
 packages = find:
 include_package_data = True
+zip_safe = False
 
 [options.packages.find]
 include =
     query_exporter
     query_exporter.*
+
+[options.package_data]
+query_exporter =
+    schemas/*
 
 [options.extras_require]
 testing =
