Support IBM DB2 (fixes #14)

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,10 +18,11 @@ description: |
 
   Currently supported databases are:
 
-    - PostgreSQL
-    - MySQL
-    - SQLite
-    - Microsoft SQL Server
+    - PostgreSQL (`postgresql://`)
+    - MySQL (`mysql://`)
+    - SQLite (`sqlite://`)
+    - Microsoft SQL Server (`mssql+pyodbc://`)
+    - IBM DB2 (`db2+ibm_db://`)
 
 license: GPL-3.0+
 icon: logo.svg
@@ -49,6 +50,7 @@ parts:
     source: .
     source-type: git
     python-packages:
+      - ibm-db-sa
       - mysql
       - psycopg2
       - pyodbc
@@ -61,6 +63,7 @@ parts:
       - libmysqlclient20
       - libodbc1
       - libpq5
+      - libxml2
     filesets:
       bins:
         - bin/query-exporter
