snap: add bash completion

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifiers =
 python_requires = >= 3.6
 install_requires =
     aiohttp
+    argcomplete
     croniter
     jsonschema
     prometheus-client
