--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,6 +22,7 @@ description: |
     - MySQL (`mysql://`)
     - SQLite (`sqlite://`)
     - Microsoft SQL Server (`mssql+pyodbc://`)
+    - IBM DB2 (`db2+ibm_db://`)
 
 license: GPL-3.0+
 icon: logo.svg
@@ -49,6 +50,9 @@ parts:
     source: .
     source-type: git
     python-packages:
+      - ibm-db-sa; platform_machine == 'x86_64'
+      - ibm-db-sa; platform_machine == 'ppc64le'
+      - ibm-db-sa; platform_machine == 's390x'
       - mysql
       - psycopg2
       - pyodbc
