--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,15 @@ classifiers =
 python_requires = >= 3.6
 install_requires =
     aiohttp
+    croniter
     jsonschema
     prometheus-client
     prometheus-aioexporter >= 1.5.1
+    python-dateutil
     PyYAML
     SQLAlchemy
     sqlalchemy_aio
-    toolrack >=2.1.0,<3.0.0
+    toolrack >= 3.0.0
 packages = find:
 include_package_data = True
 zip_safe = False
@@ -60,7 +62,9 @@ lint_files = setup.py query_exporter
 
 [coverage:run]
 source = query_exporter
-omit = query_exporter/main.py
+omit =
+     query_exporter/main.py
+     query_exporter/conftest.py
 
 [coverage:report]
 show_missing = True
