--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
     PyYAML
     SQLAlchemy
     sqlalchemy_aio
-    toolrack >= 2.1.0
+    toolrack >=2.1.0,<3.0.0
 packages = find:
 include_package_data = True
 zip_safe = False
