use default engine dialects in doc

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,8 +21,8 @@ description: |
     - PostgreSQL (`postgresql://`)
     - MySQL (`mysql://`)
     - SQLite (`sqlite://`)
-    - Microsoft SQL Server (`mssql+pyodbc://`)
-    - IBM DB2 (`db2+ibm_db://`) on supported architectures (x86_64, ppc64le and
+    - Microsoft SQL Server (`mssql://`)
+    - IBM DB2 (`db2_db://`) on supported architectures (x86_64, ppc64le and
       s390x)
 
 license: GPL-3.0+
