--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,7 +22,7 @@ description: |
     - MySQL (`mysql://`)
     - SQLite (`sqlite://`)
     - Microsoft SQL Server (`mssql://`)
-    - IBM DB2 (`db2_db://`) on supported architectures (x86_64, ppc64le and
+    - IBM DB2 (`db2://`) on supported architectures (x86_64, ppc64le and
       s390x)
 
 license: GPL-3.0+
