fix linting for isort change

--- a/setup.cfg
+++ b/setup.cfg
@@ -98,7 +98,7 @@ deps =
     black
     isort
 commands =
-    {envbindir}/isort --recursive {[globals]lint_files}
+    {envbindir}/isort {[globals]lint_files}
     {envbindir}/black -q {[globals]lint_files}
 
 [testenv:lint]
@@ -107,7 +107,7 @@ deps =
     flake8
     isort
 commands =
-    {envbindir}/isort --check-only --diff --recursive {[globals]lint_files}
+    {envbindir}/isort --check-only --diff {[globals]lint_files}
     {envbindir}/black --check {[globals]lint_files}
     {envbindir}/flake8 {[globals]lint_files}
 
