--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
 
-[tox]
+[tox:tox]
 skipsdist = True
 
 [testenv]
