--- a/query_exporter/schemas/config.yaml
+++ b/query_exporter/schemas/config.yaml
@@ -45,11 +45,59 @@ definitions:
       - dsn
     properties:
       dsn:
-        title: The database DSN string
+        title: Database connection details
         description: >
-          A string with database connection string, in the format
-          dialect[+driver]://[username:password][@host:port]/database[?option=value&...]
-        type: string
+          Can be specified either a connection string, in the format
+
+            dialect[+driver]://[user:password][@host:port]/database[?option=value&...]
+
+          or as key/value pairs.
+
+          Note that if the string format is used, username and passwords need to be URL-quoted.
+        oneOf:
+          - type: string
+          - type: object
+            additionalProperties: false
+            required:
+              - dialect
+            properties:
+              dialect:
+                title: The database dialect
+                description: >
+                  It can can including the driver to use (as "dialect+driver").
+                type: string
+              user:
+                title: The user for the connection
+                description: >
+                  Differently from the DSN string form, this doesn't need to be URL-quoted.
+                type: string
+              password:
+                title: The password for the connection
+                description: >
+                  Differently from the DSN string form, this doesn't need to be URL-quoted.
+                type: string
+              host:
+                title: The database hostname or IP address
+                description: >
+                  IPv6 addresses must be enclosed in square brackets.
+                type: string
+              port:
+                title: The database port
+                description: >
+                  If not specified, the database engine default is used.
+                type: integer
+                minimum: 1
+                maximum: 65535
+              database:
+                title: The database name
+                description: >
+                  Name of the database to connect to.
+                type: string
+              options:
+                title: Engine-specific connection options
+                description: >
+                  Options to pass to the database engine, as key/value.
+                type: object
       autocommit:
         title: Whether to enable autocommit for queries
         description: >
