--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ combine_as_imports = true
 force_grid_wrap = 2
 force_sort_within_sections = true
 from_first = false
-include_trailing_comma = true
 multi_line_output = 3
 order_by_type = false
+profile = "black"
 use_parentheses = true
