detach database connection on close (fixes #81)

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     prometheus-aioexporter >= 1.5.1
     python-dateutil
     PyYAML
-    SQLAlchemy
+    SQLAlchemy < 1.4
     sqlalchemy_aio
     toolrack >= 3.0.0
 packages = find:
