update mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,7 +78,8 @@ select = C, E, F, W, B, B950
 ignore = E203, E501, W503
 
 [mypy]
-incremental = False
+install_types = True
+non_interactive = True
 warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
