update project configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,9 @@ zip_safe = False
 include =
     query_exporter
     query_exporter.*
+exclude =
+    *.tests
+    *.tests.*
 
 [options.package_data]
 query_exporter =
@@ -61,28 +64,10 @@ console_scripts =
 [globals]
 lint_files = setup.py query_exporter
 
-[coverage:run]
-source = query_exporter
-omit =
-     query_exporter/main.py
-     query_exporter/conftest.py
-
-[coverage:report]
-show_missing = True
-fail_under = 100.0
-skip_covered = True
-
 [flake8]
 max-line-length = 80
 select = C, E, F, W, B, B950
 ignore = E203, E501, W503
-
-[mypy]
-install_types = True
-non_interactive = True
-warn_return_any = True
-warn_unused_configs = True
-ignore_missing_imports = True
 
 [tox:tox]
 skipsdist = True
