--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,29 @@
+[tool.coverage.report]
+show_missing = true
+fail_under = 100.0
+skip_covered = true
+
+[tool.coverage.run]
+source = ["${project.base}"]
+omit = [
+  "query_exporter/main.py",
+  "query_exporter/conftest.py"
+]
+
 [tool.isort]
 combine_as_imports = true
 force_grid_wrap = 2
 force_sort_within_sections = true
 from_first = false
+include_trailing_comma = true
 multi_line_output = 3
 order_by_type = false
 profile = "black"
 use_parentheses = true
+
+[tool.mypy]
+install_types = true
+non_interactive = true
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
