--- a/query_exporter/schemas/config.yaml
+++ b/query_exporter/schemas/config.yaml
@@ -228,19 +228,21 @@ definitions:
         minItems: 1
         uniqueItems: true
       parameters:
-        title: Parameter sets for the query
+        title: Parameter sets for the query (either a list or a dictionary)
         description: >
-          For list format: 
-          Queries can have named parameters (in the form ":param").
+          Specify values for parameters defined in the query.
 
-          If they are defined, this must be a list of parameters set for the query.
-          The query will be run once for each set.
+          Parameters are specified in the form ":param".
 
-          For matrix format
-          Queries can have named matrix of parameters (in the form ":param").
+          The value of this config can be
 
-          If it is defined - must be a dict of size 2, each value is an array
-          of possible parameters. The query will run once for each permutation.
+          - a list of dictionaries mapping parameter names to values.
+            The query is run once for each entry in the list.
+
+          - a dictionary mapping names to a list of dictionaries mapping sub-names and values.
+            In this case, the parameter name format is ":key__subkey".
+
+            The query is executed once for every combination of entries from the top level keys.
         oneOf:
           - type: array
             items:
