--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ non_interactive = true
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
