require sqlalchemy_aio>=0.17.0, drop workaround (fixes #105)

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     python-dateutil
     PyYAML
     SQLAlchemy < 1.4
-    sqlalchemy_aio
+    sqlalchemy_aio >= 0.17.0
     toolrack >= 3.0.0
 packages = find:
 include_package_data = True
