--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ classifiers = [
   "Intended Audience :: System Administrators",
   "License :: OSI Approved :: GNU General Public License (GPL)",
   "Operating System :: OS Independent",
-  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
   "Topic :: Database",
   "Topic :: System :: Monitoring",
   "Topic :: Utilities",
