update to prometheus-aioexporter 2.0

--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,10 @@ commands =
 
 [testenv:check]
 deps =
+    .[testing]
     mypy
 commands =
-    mypy -p query_exporter {posargs}
+    mypy query_exporter {posargs}
 
 [testenv:coverage]
 deps =
