--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Lint
         run: |
-          tox -e lint
+          tox run -e lint
 
   check:
     runs-on: ubuntu-latest
@@ -45,7 +45,7 @@ jobs:
 
       - name: Check
         run: |
-          tox -e check
+          tox run -e check
 
   test:
     runs-on: ubuntu-latest
@@ -54,6 +54,7 @@ jobs:
         python-version:
           - "3.10"
           - "3.11"
+          - "3.12"
     steps:
       - name: Repository checkout
         uses: actions/checkout@v3
