--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ keywords = [
 ]
 license = {file = "LICENSE.txt"}
 maintainers = [
-    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
+  {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
 ]
 authors = [
-    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
+  {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
 ]
 requires-python = ">=3.10"
 classifiers = [
@@ -71,28 +71,18 @@ version = {attr = "query_exporter.__version__"}
 [tool.setuptools.packages.find]
 include = ["query_exporter*"]
 
-
 [tool.setuptools.package-data]
-query_exporter = ["schemas/*"]
+query_exporter = ["py.typed", "schemas/*"]
 
-[tool.black]
+[tool.ruff]
 line-length = 79
 
-[tool.isort]
-combine_as_imports = true
-force_grid_wrap = 2
-force_sort_within_sections = true
-from_first = false
-include_trailing_comma = true
-multi_line_output = 3
-order_by_type = false
-profile = "black"
-use_parentheses = true
+[tool.ruff.lint]
+select = ["I", "RUF", "UP"]
 
-[tool.flake8]
-ignore = ["E203", "E501", "W503"]
-max-line-length = 80
-select = ["C", "E", "F", "W", "B", "B950"]
+[tool.ruff.lint.isort]
+combine-as-imports = true
+force-sort-within-sections = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
