--- a/tox.ini
+++ b/tox.ini
@@ -25,27 +25,21 @@ commands =
 
 [testenv:format]
 deps =
-    black
-    isort
     pyproject-fmt
+    ruff
     tox-ini-fmt
 commands =
-    isort {[base]lint_files}
-    black -q {[base]lint_files}
+    ruff format {[base]lint_files}
+    ruff check --fix {[base]lint_files}
     - pyproject-fmt pyproject.toml
     - tox-ini-fmt tox.ini
 
 [testenv:lint]
 deps =
-    black
-    flake8
-    flake8-pyproject
-    isort
     pyproject-fmt
+    ruff
 commands =
-    isort --check-only --diff {[base]lint_files}
-    black --check {[base]lint_files}
-    flake8 {[base]lint_files}
+    ruff check {[base]lint_files}
     pyproject-fmt --check pyproject.toml
 
 [testenv:run]
