--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ keywords = [
   "prometheus",
   "sql",
 ]
-license = {file = "LICENSE.txt"}
+license = { file = "LICENSE.txt" }
 maintainers = [
-  {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
+  { name = "Alberto Donato", email = "alberto.donato@gmail.com" },
 ]
 authors = [
-  {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
+  { name = "Alberto Donato", email = "alberto.donato@gmail.com" },
 ]
 requires-python = ">=3.10"
 classifiers = [
@@ -32,6 +32,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Topic :: Database",
   "Topic :: System :: Monitoring",
   "Topic :: Utilities",
@@ -47,42 +48,48 @@ dependencies = [
   "prometheus-aioexporter>=2",
   "prometheus-client",
   "python-dateutil",
-  "PyYAML",
-  "SQLAlchemy<1.4",
-  "sqlalchemy_aio>=0.17",
+  "pyyaml",
+  "sqlalchemy<1.4",
+  "sqlalchemy-aio>=0.17",
   "toolrack>=4",
 ]
-[project.optional-dependencies]
-testing = [
-  "pytest<8", # XXX https://github.com/pytest-dev/pytest-asyncio/issues/737
+optional-dependencies.testing = [
+  "pytest",
   "pytest-asyncio",
   "pytest-mock",
 ]
-[project.urls]
-changelog = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
-homepage = "https://github.com/albertodonato/query-exporter"
-repository = "https://github.com/albertodonato/query-exporter"
-[project.scripts]
-query-exporter = "query_exporter.main:script"
+urls.changelog = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
+urls.homepage = "https://github.com/albertodonato/query-exporter"
+urls.repository = "https://github.com/albertodonato/query-exporter"
+scripts.query-exporter = "query_exporter.main:script"
 
 [tool.setuptools.dynamic]
-version = {attr = "query_exporter.__version__"}
+version = { attr = "query_exporter.__version__" }
 
 [tool.setuptools.packages.find]
-include = ["query_exporter*"]
+include = [ "query_exporter*" ]
 
 [tool.setuptools.package-data]
-query_exporter = ["py.typed", "schemas/*"]
+query_exporter = [ "py.typed", "schemas/*" ]
 
-[tool.ruff]
+[tool.black]
 line-length = 79
 
-[tool.ruff.lint]
-select = ["I", "RUF", "UP"]
+[tool.isort]
+combine_as_imports = true
+force_grid_wrap = 2
+force_sort_within_sections = true
+from_first = false
+include_trailing_comma = true
+multi_line_output = 3
+order_by_type = false
+profile = "black"
+use_parentheses = true
 
-[tool.ruff.lint.isort]
-combine-as-imports = true
-force-sort-within-sections = true
+[tool.flake8]
+ignore = [ "E203", "E501", "W503" ]
+max-line-length = 80
+select = [ "C", "E", "F", "W", "B", "B950" ]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
@@ -93,7 +100,7 @@ show_missing = true
 skip_covered = true
 
 [tool.coverage.run]
-source = ["query_exporter"]
+source = [ "query_exporter" ]
 omit = [
   "query_exporter/main.py",
 ]
