--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ select = [ "C", "E", "F", "W", "B", "B950" ]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.coverage.report]
 fail_under = 100.0
