chore: update ruff config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ query_exporter = [ "py.typed", "schemas/*" ]
 [tool.ruff]
 line-length = 79
 
-lint.select = [ "I", "RUF", "UP" ]
+lint.select = [ "F", "I", "RUF", "UP" ]
 lint.isort.combine-as-imports = true
 lint.isort.force-sort-within-sections = true
 
